# tsumugi

./: .gitignore  Cargo.toml  README.md  build.rs
.github/scripts/: generate_completions.rs
.github/workflows/: build.yml  release.yml
libsrs/: go.mod  go.sum  srs.go
src/: app.rs  convert.rs  generate.rs  main.rs  read.rs  systemd.rs
src/protos/: geoip.proto
